--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
             
         </div>
     </main>
+
+    <footer>
+        <div class="footer">
+            
+        </div>
+    </footer>
 </body>
 </html>
