--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <header>
         <div class="center">
+            <div class="navbar">
+                <h1>LOGO</h1>
+                <u>
+                    <li>Home</li>
+                    <li>Info</li>
+                    <li>About</li>
+                </u>
+            </div>
             
         </div>
     </header>
