Almaz: added the text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </header>
     <main>
         <div class="container">
-            
+            <h2>hello</h2>
+            <p>text</p>
         </div>
     </main>
 
