Kinan:dobavil ul v header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 
     <footer>
         <div class="footer">
-            
+            <ul>
+                <li>Contacts</li>
+                <li>Group</li>
+                <li>About us</li>
+            </ul>
         </div>
     </footer>
 </body>
