--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 
 </head>
@@ -23,8 +24,10 @@
     </header>
     <main>
         <div class="container">
-            <h2>hello</h2>
-            <p>text</p>
+            <div class="content">
+                <h2>hello</h2>
+            <p>textgi</p>
+            </div>
         </div>
     </main>
 
