--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 <li>Group</li>
                 <li>About us</li>
             </ul>
+
+            <button class="privet">ClickOn</button>
         </div>
     </footer>
 </body>
