--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                     <li>Info</li>
                     <li>About</li>
                 </u>
+                <div class="bars">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
             
         </div>
