Almaz: added btn

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                 <h2>hello</h2>
             <p>textgi</p>
             </div>
+            <input type="text" placeholder="text">
+            <button>BTN</button>
         </div>
     </main>
 
