--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             </ul>
 
             <button class="privet">ClickOn</button>
+
+            <div class="footer_left">
+                <h2>lyshay komanda</h2>
+                <h3>Kinan Dzhaga Almaz</h3>
+            </div>
         </div>
     </footer>
 </body>
